--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -364,4 +364,9 @@
         name="Leilei332"
         image="https://avatars.githubusercontent.com/u/70204468"
         link="https://github.com/Leilei332"/>
+	<contributor
+		name="mxEzriRobyn"
+		contribution="Icons"
+		image="https://avatars.githubusercontent.com/u/47781799"
+		link="" />
 </resources>
